--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "pg": "^8.16.3"
   }
 }
